[package]
name = "solar-rust"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]

[lib]
name = "solar_rustlib"
path = "src/lib.rs"

[[bin]]
name = "solar-rust"
path = "src/bin/main.rs"

[dependencies]
log = "0.3.7"
rand = "0.3.15"
cgmath = "0.12.0"
specs = "0.8.1"
# binary dependencies
piston_window = "0.64.0"
# conrod = "0.51.1"
