[package]
name = "solar-rust"
version = "0.1.0"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]

[lib]
name = "solar_rustlib"
path = "src/lib.rs"

[[bin]]
name = "solar-rust"
path = "src/bin/main.rs"

[dependencies]
log = "0.3.7"
rand = "0.3.15"
nalgebra = "0.11.2"
specs = "0.8.1"
# binary dependencies
gfx = "0.14.1"
gfx_window_glutin = "0.14.0"
glutin = "0.7.4"
# conrod = "0.51.1"
